<resources>
    <string name="app_name">Coffee Store App</string>
    <!-- login -->
    <string name="login_text">Đăng nhập</string>
    <string name="username">Tên đăng nhập</string>
    <string name="password">Mật khẩu</string>
    <string name="remember_pass">Lưu mật khẩu</string>
    <string name="forgot_pass">Quên mật khẩu</string>
    <string name="create_account">Tạo tài khoản mới</string>
    <!-- button , status , ... -->
    <string name="edit_sucessful">Sửa thành công!</string>
    <string name="edit_failed">Lỗi khi sửa!</string>
    <string name="delete_sucessful">Xóa thành công!</string>
    <string name="delete_failed">Lỗi khi xóa!</string>
    <string name="addTable">Thêm bàn ăn</string>
    <string name="addMenu">Thêm thực đơn</string>
    <string name="addCategory">Thêm loại</string>
    <string name="add_sucessful">Thêm thành công!</string>
    <string name="add_failed">Thêm thất bại!</string>
    <!-- register -->
    <string name="register_button_text">Đăng ký</string>
    <string name="create_acc">Tạo tài khoản mới</string>
    <string name="full_name">Họ và tên</string>
    <string name="email">Email</string>
    <string name="phone_number">Số điện thoại</string>
    <string name="add_success">Thêm thành công</string>
    <string name="add_fail">Thêm không thành công</string>
    <!-- validation -->
    <string name="not_empty">Không được để trống</string>
    <string name="btn_next">Tiếp theo</string>

    <string name="opentoggle">Mở</string>
    <string name="closetoggle">Đóng</string>
    <string name="addcategory">Thêm <br /> loại</string>
    <string name="editcategory">Sửa <br /> loại</string>
    <string name="choseimg">Chọn hình</string>
    <!-- TODO: Remove or change this placeholder text -->
    <!-- menu -->
    <string name="add_menu">Thêm đồ uống</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>