<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:orientation="vertical"
    android:padding="30dp"
    >

    <ImageView
        android:layout_width="257dp"
        android:layout_height="257dp"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:src="@drawable/logo_coffee_store" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/muli_black"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="32sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="160dp">

        <Button
            android:id="@+id/btn_login"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:background="@drawable/round_button_style"
            android:onClick="callLoginFromWel"
            android:text="@string/login_text"
            android:textColor="@color/black"
            android:transitionName="transition_login"
            app:backgroundTint="@color/colorPrimary"/>

        <Button
            android:id="@+id/btn_signup"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:background="@drawable/round_button_style"
            android:onClick="callSignUpFromWel"
            android:text="@string/register_button_text"
            android:textColor="@color/black"
            android:transitionName="transition_signup"
            app:backgroundTint="@color/colorPrimary" />

    </LinearLayout>


</LinearLayout>
