<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:background="@drawable/ic_background"
    android:padding="30dp"
    android:transitionName="transition_login"
    android:id="@+id/layoutLogin"
    tools:context=".Activities.LoginActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/img_login_backbtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="backFromLogin"
            android:padding="5dp"
            android:background="@drawable/round_button_style"
            android:src="@drawable/ic_baseline_arrow_back_24"
            android:baselineAlignBottom="true"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_text"
            android:textColor="@color/black"
            android:textSize="40sp"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/muli_black"
            android:textAllCaps="true"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="80dp">
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txtl_login_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:hint="@string/username"
                app:hintTextColor="@color/black"
                app:boxStrokeColor="@color/black"
                app:boxStrokeWidthFocused="2dp"
                app:startIconDrawable="@drawable/ic_baseline_person_24"
                app:startIconTint="@color/black"
                android:textColorHint="@color/black"
                app:endIconTint="@color/black"
                app:endIconMode="clear_text"
                >
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textColor="@color/black"
                    android:fontFamily="@font/muli"
                    android:inputType="text"
                    />

            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txtl_login_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:hint="@string/password"
                app:hintTextColor="@color/black"
                android:textColorHint="@color/black"
                app:boxStrokeColor="@color/black"
                app:boxStrokeWidthFocused="2dp"
                app:startIconDrawable="@drawable/ic_baseline_lock_24"
                app:startIconTint="@color/black"
                app:endIconTint="@color/black"
                app:endIconMode="password_toggle"
                >
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textColor="@color/black"
                    android:fontFamily="@font/muli"
                    android:inputType="textPassword"
                    />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            >
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Widget.AppCompat.CompoundButton.CheckBox"
                android:text="Lưu đăng nhập"
                android:buttonTint="@color/black"
                android:layout_centerVertical="true"
                android:textColor="@color/black"
                />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:layout_alignParentEnd="true"
                android:background="@android:color/transparent"
                android:text="@string/forgot_pass"
                android:textAllCaps="false"/>

        </RelativeLayout>

        <Button
            android:id="@+id/btn_login_signIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/round_button_style"
            android:backgroundTint="@color/colorPrimary"
            android:text="@string/login_text"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal">
            <Button
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:text="@string/create_account"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/muli_black"
                android:textAllCaps="false"
                android:background="@android:color/transparent"/>
        </LinearLayout>
    </LinearLayout>
</ScrollView>